# kinetic-devops

./: .gitignore  CHANGELOG.md  DEFINITION_OF_DONE.md  LICENSE  README.md  main.py  pyproject.toml
Documents/: ARCHITECTURE.md  Kinetic BAQs and SQL Best Practices.md  Kinetic_State_of_Truth_Architecture.md  Zero-Trust_CI_CD.md
examples/: complete_flow.py
kinetic_devops/: KineticCore.py  __init__.py  __main__.py  auth.py  baq.py  base_client.py  boreader.py  crypto.py  efx.py  export_all.py  file_service.py  find_sensitive_data.py  fs_ops.py  metafx.py  repo_context.py  repo_maker.py  repo_maker_core.py  repo_smoke_core.py  report_service.py  solutions.py  tax_service.py  zdatatable.py
scripts/: README.md  apply_branch_protection.py  bootstrap-dev.ps1  branch_protection.targets.example.json  build_kinetic_app.py  build_kinetic_custom_layer.py  build_kinetic_custom_layer.python  build_kinetic_reports.py  clean_keyring.py  create_prs.ps1  diagnose_keyring_redacted.py  doctor.py  env_init.bat  env_init.ps1  env_init.py  env_init.sh  export_keyring.py  extract_and_format_content.python  find_orphaned_tokens.py  find_sensitive_data.py  forgejo_fullstack_smoke.py  generate-commit.py  git_stash_review.py  github_fullstack_smoke.py  install-hook.ps1  json_helper.py  kinetic_devops_utils.py  merge_text_files.py  path-sanitizer.ps1  pr_branches.json  pre-commit.py  proj_init.bat  proj_init.py  protect_main_branch.ps1  pull_api_store.py  pull_tax_configs.py  queue_auto_merge.ps1  refresh_post_db.py  rename_MetaUis.py  repo_fullstack_smoke.py  (+5 more)
tests/: README.md  __init__.py  (+29 more)
(+33 files in other folders)
