[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinetic-devops"
version = "0.1.0a1"
description = "Python toolkit for Epicor Kinetic environment management, CI/CD automation, and data migration workflows."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "keyring",
    "requests",
]
authors = [
    {name = "Kinetic DevOps Contributors"}
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["kinetic_devops*"]
exclude = ["tests*", "Documents*", "exports*", "projects*", "temp*"]
